replace max_iter with epochs (#4659)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
@@ -39,7 +39,7 @@ component:
             start_factor: 1.0
         description: learning rate scheduler, select method from {'step', 'linear',
           'constant'}for list of configurable arguments, refer to torch.optim.lr_scheduler
-    max_iter:
+    epochs:
       type: ConstrainedNumberMeta
       default: 20
       optional: true
