add model output to lr arbiter (#4659)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
@@ -245,6 +245,7 @@ component:
         roles:
           - guest
           - host
+          - arbiter
         description: ''
         is_multi: false
     metric:
