lr & linr output model in new format(#4659)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
@@ -235,6 +235,7 @@ component:
         roles:
           - guest
           - host
+          - arbiter
         description: ''
         is_multi: false
     metric:
