coordinated lr & linr add cv(#4659) set batch size default to None add linr cv examples
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
@@ -50,12 +50,13 @@ component:
         type: integer
     batch_size:
       type: ConstrainedNumberMeta
-      default: 100
+      default:
       optional: true
-      description: batch size, value less or equals to 0 means full batch
+      description: batch size, None means full batch, otherwise should be no less
+        than 10, default None
       type_meta:
         title: ConstrainedNumberMeta
-        minimum: -1
+        minimum: 10
         type: integer
     optimizer:
       type: OptimizerParam
