--- a/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
@@ -198,6 +198,16 @@ component:
       type_meta:
         title: type
         type: string
+    output_cv_data:
+      type: bool
+      default: true
+      optional: true
+      description: whether output prediction result per cv fold
+      type_meta:
+        title: bool
+        type: boolean
+        default: true
+        description: whether output prediction result per cv fold
   input_artifacts:
     data:
       train_data:
@@ -283,7 +293,7 @@ component:
       cv_output_datas:
         types:
           - dataframe
-        optional: false
+        optional: true
         stages:
           - cross_validation
         roles:
