--- a/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
+++ b/python/fate_client/pipeline/component_define/fate/homo_nn.yaml
@@ -112,7 +112,7 @@ component:
       train_data_output:
         types:
           - dataframe
-        optional: false
+        optional: true
         stages:
           - train
         roles:
@@ -123,7 +123,7 @@ component:
       predict_data_output:
         types:
           - dataframe
-        optional: false
+        optional: true
         stages:
           - predict
         roles:
@@ -135,7 +135,7 @@ component:
       train_model_output:
         types:
           - model_directory
-        optional: false
+        optional: true
         stages:
           - train
         roles:
