coordinated lr & linr support warm start(#4659)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
@@ -255,6 +255,18 @@ component:
         description: ''
         is_multi: false
     model:
+      warm_start_model:
+        types:
+          - json_model
+        optional: true
+        stages:
+          - train
+        roles:
+          - guest
+          - host
+          - arbiter
+        description: ''
+        is_multi: false
       input_model:
         types:
           - json_model
