use utils sample(#4662) rename parameter(#4779)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/data_split.yaml
+++ b/python/fate_client/pipeline/component_define/fate/data_split.yaml
@@ -71,9 +71,9 @@ component:
       type_meta:
         title: bool
         type: boolean
-        default: false
-        description: whether sample with stratification, should not use this for data
-          with continuous label values
+        default: true
+        description: sampling mode, 'homo' & 'local' scenario should sample locally,
+          default True for hetero scenario
     random_state:
       type: ConstrainedNumberMeta
       default:
@@ -83,14 +83,18 @@ component:
         title: ConstrainedNumberMeta
         minimum: 0
         type: integer
-    ctx_mode:
-      type: type
-      default: hetero
+    federated_sample:
+      type: bool
+      default: true
       optional: true
-      description: sampling mode, 'homo' & 'local' will both sample locally
+      description: sampling mode, 'homo' & 'local' scenario should sample locally,
+        default True for hetero scenario
       type_meta:
-        title: type
-        type: string
+        title: bool
+        type: boolean
+        default: true
+        description: sampling mode, 'homo' & 'local' scenario should sample locally,
+          default True for hetero scenario
   input_artifacts:
     data:
       input_data:
