make input models optional for hetero feature selection(#4661) edit pipeline examples(#5008)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/hetero_feature_selection.yaml
+++ b/python/fate_client/pipeline/component_define/fate/hetero_feature_selection.yaml
@@ -238,7 +238,7 @@ component:
       input_models:
         types:
           - json_model
-        optional: false
+        optional: true
         stages:
           - train
         roles:
