--- a/python/fate_client/pipeline/component_define/fate/union.yaml
+++ b/python/fate_client/pipeline/component_define/fate/union.yaml
@@ -7,18 +7,7 @@ component:
   roles:
     - guest
     - host
-  parameters:
-    axis:
-      type: ConstrainedNumberMeta
-      default: 0
-      optional: false
-      description: axis along which concatenation is performed, 0 for row-wise, 1
-        for column-wise
-      type_meta:
-        title: ConstrainedNumberMeta
-        minimum: 0
-        maximum: 1
-        type: integer
+  parameters: { }
   input_artifacts:
     data:
       input_data_list:
