--- a/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_linr.yaml
@@ -2,7 +2,7 @@ component:
   name: coordinated_linr
   description: ''
   provider: fate
-  version: 2.0.0-alpha
+  version: 2.0.0-beta
   labels: [ ]
   roles:
     - guest
@@ -160,6 +160,24 @@ component:
           fit_intercept: true
           random_state:
         description: Model param init setting.
+    key_length:
+      type: ConstrainedNumberMeta
+      default: 1024
+      optional: true
+      description: key length
+      type_meta:
+        title: ConstrainedNumberMeta
+        minimum: 0
+        type: integer
+    floating_point_precision:
+      type: ConstrainedNumberMeta
+      default: 23
+      optional: true
+      description: 'floating point precision, '
+      type_meta:
+        title: ConstrainedNumberMeta
+        minimum: 0
+        type: integer
     cv_param:
       type: CVParam
       default:
