coordinated lr & linr use he param for he kind and key length (#4659)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
+++ b/python/fate_client/pipeline/component_define/fate/coordinated_lr.yaml
@@ -129,15 +129,34 @@ component:
       type_meta:
         title: type
         type: string
-    key_length:
-      type: ConstrainedNumberMeta
-      default: 1024
+    he_param:
+      type: HEParam
+      default:
+        kind: paillier
+        key_length: 1024
       optional: true
-      description: key length
+      description: homomorphic encryption param
       type_meta:
-        title: ConstrainedNumberMeta
-        minimum: 0
-        type: integer
+        title: HEParam
+        $ref: '#/definitions/abc__HEParam'
+        definitions:
+          abc__HEParam:
+            title: HEParam
+            type: object
+            properties:
+              kind:
+                title: Kind
+                type: string
+              key_length:
+                title: Key Length
+                default: 1024
+                type: integer
+            required:
+              - kind
+        default:
+          kind: paillier
+          key_length: 1024
+        description: homomorphic encryption param
     init_param:
       type: InitParam
       default:
