--- a/python/fate_client/pipeline/component_define/fate/dataframe_io_test.yaml
+++ b/python/fate_client/pipeline/component_define/fate/dataframe_io_test.yaml
@@ -2,7 +2,7 @@ component:
   name: dataframe_io_test
   description: ''
   provider: fate
-  version: 2.0.0-alpha
+  version: 2.0.0-beta
   labels: []
   roles:
     - local
