--- a/python/fate_client/pipeline/component_define/fate/sample.yaml
+++ b/python/fate_client/pipeline/component_define/fate/sample.yaml
@@ -2,7 +2,7 @@ component:
   name: sample
   description: ''
   provider: fate
-  version: 2.0.0-alpha
+  version: 2.0.0-beta
   labels: [ ]
   roles:
     - guest
