--- a/python/fate_client/pipeline/component_define/fate/statistics.yaml
+++ b/python/fate_client/pipeline/component_define/fate/statistics.yaml
@@ -2,7 +2,7 @@ component:
   name: statistics
   description: ''
   provider: fate
-  version: 2.0.0-alpha
+  version: 2.0.0-beta
   labels: [ ]
   roles:
     - guest
