update hetero-sbt parameters
Signed-off-by: cwj <talkingwallace@sohu.com>

--- a/python/fate_client/pipeline/component_define/fate/hetero_sbt.yaml
+++ b/python/fate_client/pipeline/component_define/fate/hetero_sbt.yaml
@@ -2,7 +2,7 @@ component:
   name: hetero_sbt
   description: ''
   provider: fate
-  version: 2.0.0-alpha
+  version: 2.0.0-beta
   labels: []
   roles:
     - guest
@@ -62,15 +62,6 @@ component:
         title: ConstrainedNumberMeta
         exclusiveMinimum: 0
         type: integer
-    encrypt_key_length:
-      type: ConstrainedNumberMeta
-      default: 2048
-      optional: true
-      description: paillier encrypt key length
-      type_meta:
-        title: ConstrainedNumberMeta
-        exclusiveMinimum: 0
-        type: integer
     l2:
       type: ConstrainedNumberMeta
       default: 0.1
@@ -116,6 +107,66 @@ component:
         title: ConstrainedNumberMeta
         exclusiveMinimum: 0
         type: number
+    gh_pack:
+      type: bool
+      default: true
+      optional: true
+      description: whether to pack gradient and hessian together
+      type_meta:
+        title: bool
+        type: boolean
+        default: true
+        description: whether to use histogram subtraction
+    split_info_pack:
+      type: bool
+      default: true
+      optional: true
+      description: for host side, whether to pack split info together
+      type_meta:
+        title: bool
+        type: boolean
+        default: true
+        description: whether to use histogram subtraction
+    hist_sub:
+      type: bool
+      default: true
+      optional: true
+      description: whether to use histogram subtraction
+      type_meta:
+        title: bool
+        type: boolean
+        default: true
+        description: whether to use histogram subtraction
+    he_param:
+      type: HEParam
+      default:
+        kind: paillier
+        key_length: 1024
+      optional: true
+      description: homomorphic encryption param, support paillier, ou and mock in
+        current version
+      type_meta:
+        title: HEParam
+        $ref: '#/definitions/abc__HEParam'
+        definitions:
+          abc__HEParam:
+            title: HEParam
+            type: object
+            properties:
+              kind:
+                title: Kind
+                type: string
+              key_length:
+                title: Key Length
+                default: 1024
+                type: integer
+            required:
+              - kind
+        default:
+          kind: paillier
+          key_length: 1024
+        description: homomorphic encryption param, support paillier, ou and mock in
+          current version
   input_artifacts:
     data:
       train_data:
