--- a/python/fate_client/requirements.txt
+++ b/python/fate_client/requirements.txt
@@ -1,14 +1,14 @@
 pip>=21
-click==8.1.3
+click
 poetry==1.2.2
-pandas==1.1.5
+pandas==2.0.3
 psutil==5.9.5
 requests<2.26.0
 requests_toolbelt==0.9.1
 ruamel-yaml==0.16.10
 setuptools==68.0.0
 networkx
-pydantic==1.10.7
+pydantic==1.10.12
 ml_metadata
 protobuf==3.19.6
 grpcio==1.46.3
