--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -6,7 +6,7 @@ psutil==5.9.5
 requests<2.26.0
 requests_toolbelt==0.9.1
 ruamel-yaml==0.16
-setuptools==68.0.0
+setuptools
 networkx
 pydantic==1.10.12
 ml_metadata
