fix statistic filter param(#4661)
Signed-off-by: Yu Wu <yolandawu131@gmail.com>

--- a/python/fate_client/pipeline/component_define/fate/hetero_feature_selection.yaml
+++ b/python/fate_client/pipeline/component_define/fate/hetero_feature_selection.yaml
@@ -146,7 +146,9 @@ component:
               - mean
             type: array
             items:
-              type: string
+              anyOf:
+                - type: string
+                - type: string
           filter_type:
             title: Filter Type
             default:
